--- a/pom.xml
+++ b/pom.xml
@@ -39,8 +39,14 @@
 			<artifactId>jsoup</artifactId>
 			<version>1.15.1</version>
 		</dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
 
-	</dependencies>
+    </dependencies>
 
 	<build>
 		<plugins>
