--- a/pom.xml
+++ b/pom.xml
@@ -94,7 +94,11 @@
             <artifactId>spring-aop</artifactId>
             <version>5.3.21</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-jxr-plugin</artifactId>
+            <version>2.5</version>
+        </dependency>
     </dependencies>
 
 
