--- a/src/main/java/com/vilkov/PriceMonitoring/model/logger/logger.properties
+++ b/src/main/java/com/vilkov/PriceMonitoring/model/logger/logger.properties
@@ -1,2 +1,14 @@
-rootFolder = ./logs
-#TODO ??????? ??? ??????????? ? ???? ????????? ? ???? ?????????? ?????
+rootFolder=./logs
+
+cbrAdapterLogFolder=cbrAdapter_log
+cbrAdapterLogFileName=cbrAdapter_log.txt
+
+controllersLogFolder=controllers_log
+controllersLogFileName=controllers_log.txt
+
+dbAdapterLogFolder=db_log
+dbAdapterLogFolderFileName=db_log.txt
+
+modelLogFolder=model_log
+modelLogFileName=model_log.txt
+
